--- a/index.html
+++ b/index.html
@@ -3,4 +3,9 @@ layout: default
 title: Long Haul
 ---
 
-
+💻⌨️ Deploying something epic...
+  $ git commit -m "New beginnings"
+  $ git push origin creativity
+🔧 Site under live development.
+🛠️ Please excuse the digital dust.
+🚀 Coming soon.
