--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@ layout: default
 title: Long Haul
 ---
 
-💻⌨️ Deploying something epic...
-  $ git commit -m "New beginnings"
-  $ git push origin creativity
-🔧 Site under live development.
-🛠️ Please excuse the digital dust.
-🚀 Coming soon.
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Coming Soon</title>
+</head>
+<body style="font-family: monospace; text-align: center; margin-top: 20%;">
+  💻⌨️ Deploying something epic...<br>
+  <code>$ git commit -m "New beginnings"</code><br>
+  <code>$ git push origin creativity</code><br>
+  🔧 Site under live development.<br>
+  🛠️ Please excuse the digital dust.<br>
+  🚀 Coming soon.
+</body>
+</html>
